fix up alignment for images

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,11 +87,8 @@ a {
 
 /* blog posts list */
 
-.post-excerpt p {
-  text-align: center;
-}
-
 .post-excerpt img {
+  text-align: center;
   width: 30rem;
 }
 
